# swellnote

./: .gitignore  MANIFEST.in  README.md  app.py  index.css  index.html  pyproject.toml  setup.cfg  setup.py
deploy/: README.md  swellnote-api.service  swellnote-nginx
src/: __init__.py
src/static/: index.html  index.js  mute-toggle.js
static/: index.css  index.html  index.js
swellnote/: __init__.py  db.py
swellnote/deploy/: README.md  swellnote-api.service
swellnote/static/: index.css  index.html  index.js  mute-toggle.js  swellnote-button.js
