[metadata]
name = swell-note
version = 0.1.0
author = Max Shenfield
author_email = shenfieldmax@gmail.com
description = A message-in-a-bottle simulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mshenfield/swell-note
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Framework :: Flask

[options]
packages = find:
include_package_data = True
install_requires =
    flask
python_required = >= 3.8
 
[options.extras_requires]
deploy = gunicorn

[options.package_dir]
swell-note = src
